Requested fixes